css/style.css
/****** General ***********/
* {
  box-sizing: border-box;
  font-family: 'Raleway', sans-serif;
}

/* Remove default input search style */
input[type="search"]::-webkit-search-decoration,
input[type="search"]::-webkit-search-cancel-button,
input[type="search"]::-webkit-search-results-button,
input[type="search"]::-webkit-search-results-decoration {
  display: none;
}

:root {
  --main-color: #0065FC;
  --main-bg-color: #F2F2F2;
  --filter-bg-color: #DEEBFF;
}

/* change default color of font icon elements */
.fa-solid {
  color: var(--main-color);
}

a {
  text-decoration: none;
  color: inherit;
}

body {
  display: flex;
  justify-content: center;
  margin: 0px;
}

h2 {
  font-size: 22px;
  font-weight: 700;
}

button {
  font-size: 100%;
  font-family: inherit;
  border: 0;
  padding: 0;
  cursor: pointer;
}

/* Navbar css*/

.nav {
  display: flex;
  justify-content: space-between;
}

.nav__desktop {
  display: flex;
  justify-content: flex-end;
  padding: 0px 50px;
}

.nav__logo {
  width: 61.09px;
  height: 19px;
  margin: 30px 50px 30px 0px;
}

.nav__link {
  padding-top: 16px;
}

.nav__last-link {
  margin-left: 40px;
}

.nav__link:hover {
  color: var(--main-color);
  cursor: pointer;
  border-top: solid 2px;
}

/* info group section */

.info-group {
  display: flex;
  flex-direction: column;
  gap: 35px;
}

.info-group__main-title {
  font-size: 22px;
}

.info-group__subtitle {
  margin-bottom: 0px;
}

.info-group__form {
  display: flex;
  align-items: center;
  width: 377px;
  height: 49px;
  border: 1px solid var(--main-bg-color);
  gap: 24px;
}

.info-group__location-dot-wrapper {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 50px;
  background-color: var(--main-bg-color);
  height: 49px;
  border-radius: 15px 0px 0px 15px;
}

.info-group__location-dot {
  color: black;
}

.info-group__search {
  border: none;
}

.info-group__search:focus {
  outline: none;
}

.info-group__submit {
  display: inline-block;
  height: 100%;
  width: 132px;
  border: none;
  border-radius: 0px 15px 15px 0px;
  background-color: var(--main-color);
  color: white;
  font-family: 'Raleway';
  font-size: 18px;
  font-weight: 700;
}

.info-group__submit:hover {
  cursor: pointer;
}

.info-group__filters {
  display: flex;
  align-items: center;
  gap: 15px;
}

.info-group__filter-text {
  font-size: 18px;
  font-weight: 700;
}

.info-group__button {
  height: 50px;
  border-radius: 25px;
  padding: 4px 19px;
  font-size: 17px;
  font-weight: 700;
}

.info-group__button:hover {
  cursor: pointer;
}

.info-group__info {
  margin-bottom: 37.5px;
}

.info-group__icon {
  margin-right: 10px;
  color: var(--main-color);
}

.main-container {
  width: 100%;
  max-width: 1440px;
  padding: 0 50px;
}

.card {
  background-color: white;
  border-radius: 20px;
  padding: 5px;
  filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
}

.card img {
  object-fit: cover;
}

.card-title {
  font-size: 16px;
}

.euro {
  font-weight: 700;
}

.neutral-star {
  color: var(--main-bg-color);
}

/****** Hebergements And Populaires ***********/
.hebergements-and-populaires {
  display: flex;
  justify-content: space-between;
  margin-bottom: 35px;
}

.hebergements,
.populaires {
  background-color: var(--main-bg-color);
  border-radius: 20px;
  padding: 30px;
  box-sizing: border-box;
}

/****** Hebergements ***********/
.hebergements {
  width: 65%;
  display: flex;
  flex-direction: column;
  gap: 30px;
}

.hebergements__title {
  margin: 0;
}

.hebergements__cards {
  display: flex;
  flex-wrap: wrap;
  gap: 30px;
}

.hebergements__cards .card-content {
  padding: 0 15px;
}

.hebergements__cards .card {
  display: flex;
  flex-direction: column;
  width: 250.33px;
  gap: 4px;
  padding: 0 0 15px;
}

.hebergements__cards .card-title {
  margin-top: 0;
}

.hebergements__cards .card-subtitle {
  margin-top: 0;
  margin-bottom: 5px;
}

.hebergements__cards img {
  border: 5px solid #FFFFFF;
  border-radius: 20px 20px 0 0;
  height: 124px;
}

.hebergements__see-more-button {
  font-size: 18px;
  font-weight: 700;
  text-align: left;
}


/****** Populaires ***********/
.populaires {
  width: 32%;
}

.populaires__title-wrapper {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.populaires__title {
  margin: 0;
}

.populaires__cards .card {
  display: flex;
  margin-top: 33px;
}

.populaires__cards img {
  width: 33%;
  height: 136px;
  border-top-left-radius: 20px;
  border-bottom-left-radius: 20px;
}

.populaires__cards .card-content {
  width: 67%;
  padding-left: 15px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  box-sizing: border-box;
}

.populaires__cards .card-title {
  margin-top: 10px;
  margin-bottom: 4px;
}

.populaires__cards .card-subtitle {
  margin: 0;
}

.populaires__cards .card-rating {
  margin-bottom: 5px;
}

/****** Activities ***********/

.activities {
  padding: 30px;
  display: flex;
  flex-direction: column;
  gap: 30px;
}

.activities__main-title {
  margin: 0;
}

.activities__cards {
  display: flex;
  gap: 30px;
}

.activities__card {
  width: 297.5px;
  height: 439px;
  filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
}

.activities__img {
  border-radius: 20px 20px 0 0;
  object-fit: cover;
  width: 100%;
  height: 380px;
}

.activities__img-title {
  margin-left: 19px;
  margin-right: 19px;
}

/****** Footer ***********/
footer {
  background-color: var(--main-bg-color);
  display: flex;
}

.footer__section {
  padding: 20px;
  flex-grow: 1;
  display: flex;
  flex-direction: column;
  gap: 15px;
}

.footer__titles {
  font-size: 18px;
  font-weight: 700;
  margin: 0;
}

.footer_link {
  font-size: 16px;
}

.footer__link:hover {
  text-decoration: underline;
}

/* Le code ci-dessous correspond à la version responsive uniquement */

/****** Media queries ***********/
/* Medium devices (tablets, less/equal than 1024px) */
@media (max-width: 1024px) {
  .hebergements-and-populaires {
    flex-direction: column;
  }

  .hebergements {
    width: 100%;
  }

  .populaires {
    width: 100%;
    margin-top: 50px;
  }

  .populaires__cards {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
  }

  .populaires__cards .card {
    width: 30%;
  }

  .populaires__cards .card-title {
    font-size: 14px;
  }

  .populaires__cards .card-subtitle {
    font-size: 13px;
  }

  .activities__cards {
    flex-wrap: wrap;
  }
}

/* Small devices (phones, less than 768px) */
@media (max-width: 767.98px) {}

